[gd_scene load_steps=2 format=2]

[ext_resource path="res://CombatOverlay/CombatForecast.gd" type="Script" id=1]

[node name="CombatForecast" type="Panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 127.0
margin_bottom = 89.0
rect_min_size = Vector2( 244, 82 )
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer"]
self_modulate = Color( 0, 3.92157, 9.80392, 0.321569 )
margin_right = 120.0
margin_bottom = 82.0
rect_min_size = Vector2( 120, 82 )

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 113.0
margin_bottom = 75.0

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/PanelContainer/VBoxContainer"]
margin_right = 106.0
margin_bottom = 14.0

[node name="NameLabel" type="Label" parent="HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
margin_right = 38.0
margin_bottom = 14.0
text = "Name"

[node name="LevelLabel" type="Label" parent="HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 42.0
margin_right = 60.0
margin_bottom = 14.0
text = "Lvl"

[node name="Level" type="Label" parent="HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 64.0
margin_right = 72.0
margin_bottom = 14.0
text = "5"

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 106.0
margin_bottom = 32.0

[node name="HPLabel" type="Label" parent="HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
margin_right = 18.0
margin_bottom = 14.0
text = "HP"

[node name="HP" type="Label" parent="HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
margin_left = 22.0
margin_right = 59.0
margin_bottom = 14.0
text = "20/20"

[node name="HBoxContainer3" type="HBoxContainer" parent="HBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 106.0
margin_bottom = 68.0

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer3"]
margin_right = 38.0
margin_bottom = 32.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer3/HBoxContainer"]
margin_right = 30.0
margin_bottom = 32.0

[node name="DamageLabel" type="Label" parent="HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer3/HBoxContainer/VBoxContainer"]
margin_right = 30.0
margin_bottom = 14.0
text = "Dmg"

[node name="Damage" type="Label" parent="HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer3/HBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 30.0
margin_bottom = 32.0
text = "5"

[node name="Label" type="Label" parent="HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer3/HBoxContainer"]
margin_left = 34.0
margin_top = 9.0
margin_right = 38.0
margin_bottom = 23.0
text = " "

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer3"]
margin_left = 42.0
margin_right = 69.0
margin_bottom = 32.0

[node name="VBoxContainer3" type="VBoxContainer" parent="HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer3/HBoxContainer2"]
margin_right = 19.0
margin_bottom = 32.0

[node name="HitRateLabel" type="Label" parent="HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer3/HBoxContainer2/VBoxContainer3"]
margin_right = 19.0
margin_bottom = 14.0
text = "Hit"

[node name="HitRate" type="Label" parent="HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer3/HBoxContainer2/VBoxContainer3"]
margin_top = 18.0
margin_right = 19.0
margin_bottom = 32.0
text = "10"

[node name="Label" type="Label" parent="HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer3/HBoxContainer2"]
margin_left = 23.0
margin_top = 9.0
margin_right = 27.0
margin_bottom = 23.0
text = " "

[node name="HBoxContainer3" type="HBoxContainer" parent="HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer3"]
margin_left = 73.0
margin_right = 99.0
margin_bottom = 32.0

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer3/HBoxContainer3"]
margin_right = 18.0
margin_bottom = 32.0

[node name="CritRateLabel" type="Label" parent="HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer3/HBoxContainer3/VBoxContainer2"]
margin_right = 18.0
margin_bottom = 14.0
text = "Crt"

[node name="CritRate" type="Label" parent="HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer3/HBoxContainer3/VBoxContainer2"]
margin_top = 18.0
margin_right = 18.0
margin_bottom = 32.0
text = "15"

[node name="Label" type="Label" parent="HBoxContainer/PanelContainer/VBoxContainer/HBoxContainer3/HBoxContainer3"]
margin_left = 22.0
margin_top = 9.0
margin_right = 26.0
margin_bottom = 23.0
text = " "

[node name="PanelContainer2" type="PanelContainer" parent="HBoxContainer"]
modulate = Color( 1, 0.0588235, 0.0588235, 1 )
self_modulate = Color( 0, 3.61961, 9.80392, 1 )
margin_left = 124.0
margin_right = 244.0
margin_bottom = 82.0
rect_min_size = Vector2( 120, 82 )

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/PanelContainer2"]
margin_left = 7.0
margin_top = 7.0
margin_right = 113.0
margin_bottom = 75.0

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/PanelContainer2/VBoxContainer"]
margin_right = 106.0
margin_bottom = 14.0

[node name="NameLabel" type="Label" parent="HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer"]
margin_right = 38.0
margin_bottom = 14.0
text = "Name"

[node name="LevelLabel" type="Label" parent="HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer"]
margin_left = 42.0
margin_right = 60.0
margin_bottom = 14.0
text = "Lvl"

[node name="Level" type="Label" parent="HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer"]
margin_left = 64.0
margin_right = 72.0
margin_bottom = 14.0
text = "5"

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/PanelContainer2/VBoxContainer"]
margin_top = 18.0
margin_right = 106.0
margin_bottom = 32.0

[node name="HPLabel" type="Label" parent="HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer2"]
margin_right = 18.0
margin_bottom = 14.0
text = "HP"

[node name="HP" type="Label" parent="HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer2"]
margin_left = 22.0
margin_right = 59.0
margin_bottom = 14.0
text = "20/20"

[node name="HBoxContainer3" type="HBoxContainer" parent="HBoxContainer/PanelContainer2/VBoxContainer"]
margin_top = 36.0
margin_right = 106.0
margin_bottom = 68.0

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer3"]
margin_right = 38.0
margin_bottom = 32.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer3/HBoxContainer"]
margin_right = 30.0
margin_bottom = 32.0

[node name="DamageLabel" type="Label" parent="HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer3/HBoxContainer/VBoxContainer"]
margin_right = 30.0
margin_bottom = 14.0
text = "Dmg"

[node name="Damage" type="Label" parent="HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer3/HBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 30.0
margin_bottom = 32.0
text = "5"

[node name="Label" type="Label" parent="HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer3/HBoxContainer"]
margin_left = 34.0
margin_top = 9.0
margin_right = 38.0
margin_bottom = 23.0
text = " "

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer3"]
margin_left = 42.0
margin_right = 69.0
margin_bottom = 32.0

[node name="VBoxContainer3" type="VBoxContainer" parent="HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer3/HBoxContainer2"]
margin_right = 19.0
margin_bottom = 32.0

[node name="HitRateLabel" type="Label" parent="HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer3/HBoxContainer2/VBoxContainer3"]
margin_right = 19.0
margin_bottom = 14.0
text = "Hit"

[node name="HitRate" type="Label" parent="HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer3/HBoxContainer2/VBoxContainer3"]
margin_top = 18.0
margin_right = 19.0
margin_bottom = 32.0
text = "10"

[node name="Label" type="Label" parent="HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer3/HBoxContainer2"]
margin_left = 23.0
margin_top = 9.0
margin_right = 27.0
margin_bottom = 23.0
text = " "

[node name="HBoxContainer3" type="HBoxContainer" parent="HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer3"]
margin_left = 73.0
margin_right = 99.0
margin_bottom = 32.0

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer3/HBoxContainer3"]
margin_right = 18.0
margin_bottom = 32.0

[node name="CritRateLabel" type="Label" parent="HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer3/HBoxContainer3/VBoxContainer2"]
margin_right = 18.0
margin_bottom = 14.0
text = "Crt"

[node name="CritRate" type="Label" parent="HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer3/HBoxContainer3/VBoxContainer2"]
margin_top = 18.0
margin_right = 18.0
margin_bottom = 32.0
text = "15"

[node name="Label" type="Label" parent="HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer3/HBoxContainer3"]
margin_left = 22.0
margin_top = 9.0
margin_right = 26.0
margin_bottom = 23.0
text = " "
